RT-20633: WTCS Goals Page Updates

--- a/web-content/root/education/EPIC/WeTeach_CS/goals-and-outcomes.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/goals-and-outcomes.html
@@ -61,48 +61,48 @@ Style guide: components.generic.article-list
 			<div class="row">
 				<div class="col-sm-4 weteachcs-card__content article-list__item">
 					<p>
-						Over 500 inservice Texas educators have added a computer science certification through the WeTeach_CS Certification Incentive Program since fall 2015. This total exceeds all university pre-service programs in the nation combined.</p>
+						Over 500 inserviceTexas educators have added a computer science certification through the WeTeach_CS Certification Incentive Program since fall 2015. This total exceeds all university pre-service programs in the nation combined.</p>
 					<p>
 						<small>Source: <a href="https://utexas.box.com/s/uodmy302oxkem6eenbhdohhuhn15hfk3" title="2019 TI Leadership Summit - Region 10 - EPIC Presentation">2019 TI Leadership Summit, EPIC Presentation</a> (slide #35)</small></p>
 				</div>
 				<div class="col-sm-8 weteachcs-card__figure">
-					<img alt="The number of certified computer science teachers, in Texas, with initial certifications in 2011–12 or later, has risen from much less than 100 during the 2011–12 school year to almost 750 during the 2017–18 school year. The most dramatic increase started during the 2014–15 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-certified_cs_teachers-2011_plus.png" /></div>
+					<img alt="The number of certified computer science teachers, in Texas, with initial certifications in 2011–12 or later, has risen from much less than 100 during the 2011–12 school year to almost 750 during the 2017–18 school year. The most dramatic increase started during the 2014–15 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-certified_cs_teachers-2011_plus.png/ccdf0fac-ab1a-42dd-bcf5-bf78a8393937?t=1639181224356" /></div>
 			</div>
 		</article>
 		<article class="weteachcs-card weteachcs-card--chart">
 			<div class="row">
 				<div class="col-sm-4 weteachcs-card__content article-list__item">
 					<p>
-						Texas has almost doubled the percentage of high schools offering computer science since 2011-12.</p>
+						Texas has more than doubledthe percentage of high schools offering computer science since 2011-12.</p>
 					<p>
 						<small>Source: <a href="https://utexas.box.com/s/uodmy302oxkem6eenbhdohhuhn15hfk3" title="2019 TI Leadership Summit - Region 10 - EPIC Presentation">2019 TI Leadership Summit, EPIC Presentation</a> (slide #41)</small></p>
 				</div>
 				<div class="col-sm-8 weteachcs-card__figure">
-					<img alt="The percentage of high schools, in Texas, that offer computer science courses, has steadily increased from 23% during the 2011–12 school year to 43% during the 2017–18 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-cs_hs_courses.png" /></div>
+					<img alt="The percentage of high schools, in Texas, that offer computer science courses, has steadily increased from 23% during the 2011–12 school year to 43% during the 2017–18 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-cs_hs_courses.png/d440d67b-98d9-46dc-9fe2-1b48b33f9e2e?t=1639181255466" /></div>
 			</div>
 		</article>
 		<article class="weteachcs-card weteachcs-card--chart">
 			<div class="row">
 				<div class="col-sm-4 weteachcs-card__content article-list__item">
 					<p>
-						Texas has seen a 149% increase in overall computer science enrollment since 2011-12.</p>
+						After adjusting for population growth, Texas has seen a 144% increase in overall computer science enrollment since 2011-12.</p>
 					<p>
 						<small>Source: <a href="https://utexas.box.com/s/uodmy302oxkem6eenbhdohhuhn15hfk3" title="2019 TI Leadership Summit - Region 10 - EPIC Presentation">2019 TI Leadership Summit, EPIC Presentation</a> (slide #43)</small></p>
 				</div>
 				<div class="col-sm-8 weteachcs-card__figure">
-					<img alt="The number of high schools students, in Texas, that are enrolled in computer science courses, has steadily increased from around 25,000 during the 2011–12 school year to almost 60,000 during the 2017–18 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-enrolled_hs_students.png" /></div>
+					<img alt="The number of high schools students, in Texas, that are enrolled in computer science courses, has steadily increased from around 25,000 during the 2011–12 school year to almost 60,000 during the 2017–18 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-enrolled_hs_students.png/a9ea5344-d234-45c1-98e2-ae0ec04a6fe3?t=1639181300670" /></div>
 			</div>
 		</article>
 		<article class="weteachcs-card weteachcs-card--chart">
 			<div class="row">
 				<div class="col-sm-4 weteachcs-card__content article-list__item">
 					<p>
-						Texas is closing the gaps for economically disadvantaged students and students of color but still struggling to attract young girls to high school computer science.</p>
+						Texas is beginning to closeCS enrollment gaps for economically disadvantaged students, students of color, and students with disabilities,but still struggling to attract young girls to high school computer science.</p>
 					<p>
 						<small>Source: <a href="https://utexas.box.com/s/uodmy302oxkem6eenbhdohhuhn15hfk3" title="2019 TI Leadership Summit - Region 10 - EPIC Presentation">2019 TI Leadership Summit, EPIC Presentation</a> (slide #45)</small></p>
 				</div>
 				<div class="col-sm-8 weteachcs-card__figure">
-					<img alt="The number of high schools students, in Texas, that are enrolled in computer science courses, and are categorized as Economically Disadvantaged (Eco-Dis), female, or Under-Represented Minority (URM) has steadily increased from almost 10,000 during the 2011–12 school year to almost 30,000 (Eco-Dis), 25,000 (female), and 15,000 (URM) during the 2017–18 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-enrolled_hs_students-diversity.png" /></div>
+					<img alt="The number of high schools students, in Texas, that are enrolled in computer science courses, and are categorized as Economically Disadvantaged (Eco-Dis), female, or Under-Represented Minority (URM) has steadily increased from almost 10,000 during the 2011–12 school year to almost 30,000 (Eco-Dis), 25,000 (female), and 15,000 (URM) during the 2017–18 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-enrolled_hs_students-diversity.png/62860466-0ab3-471f-bbe3-11dc8f2df194?t=1639181277050" /></div>
 			</div>
 		</article>
 	</section>
