--- a/web-content/root/home--training-and-events.html
+++ b/web-content/root/home--training-and-events.html
@@ -8,12 +8,10 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.designsafe-ci.org/learning-center/training/workshops/fiu-ef/2021-wow-ef-user-workshop" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1694621/designsafe-events.jpg" style="margin-bottom:10px;" /></a></div>
+		<a href="https://frontera-portal.tacc.utexas.edu/fellowship/application/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/nsf-frontera.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://www.designsafe-ci.org/learning-center/training/workshops/fiu-ef/2021-wow-ef-user-workshop" target="_blank">2021 NSF NHERI Wall of Wind Experimental Facility User Workshop</a><br />
-			December 2nd – 3rd<span>&nbsp; |&nbsp;
-			9:00AM – 5:00PM ET</span>&nbsp; |&nbsp;
-			Miami, FL</p>
+			<a href="https://frontera-portal.tacc.utexas.edu/fellowship/application/" target="_blank">Frontera Computational Science Fellowships: Apply Now</a><br />
+			February 18th, 2022</p>
 	</div>
 </div>
