--- a/web-content/root/education/EPIC/WeTeach_CS/goals-and-outcomes.html
+++ b/web-content/root/education/EPIC/WeTeach_CS/goals-and-outcomes.html
@@ -63,7 +63,7 @@ Style guide: components.generic.article-list
 					<p>
 						Over 500 inservice Texas educators have added a computer science certification through the WeTeach_CS Certification Incentive Program since fall 2015. This total exceeds all university pre-service programs in the nation combined.</p>
 					<p>
-						<small>Note: “Initial” includes certifications obtained through preservice programs as well as teachers who transferred from out of state. “Inservice” includes only teachers whose initial certification was in another field and who later obtained certification in CS.</p>
+						<small>Note: “Initial” includes certifications obtained through preservice programs as well as teachers who transferred from out of state. “Inservice” includes only teachers whose initial certification was in another field and who later obtained certification in CS.</small>
 				</div>
 				<div class="col-sm-8 weteachcs-card__figure">
 					<img alt="The number of certified computer science teachers, in Texas, with initial certifications in 2011–12 or later, has risen from much less than 100 during the 2011–12 school year to almost 750 during the 2017–18 school year. The most dramatic increase started during the 2014–15 school year." class="img-responsive weteachcs-card__media" src="/documents/1084364/1750990/weteach_cs-chart-certified_cs_teachers-2011_plus.png/ccdf0fac-ab1a-42dd-bcf5-bf78a8393937?t=1639611498756" /></div>
