--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -24,54 +24,41 @@
 .panel-title > a:focus {
 	text-decoration:none;
 }</style>
-<p>
-	Working at TACC means being part of a dynamic and challenging environment, where talented individuals can pursue their interests, engage their imaginations, and work at the forefront of computational research. Working with us also means living in Austin, an exceptional city that thrives on innovation, culture, and creativity. Investigate current opportunities below.</p>
-<h4>
-	Current Job Opportunities</h4>
-<!--<p><b>No open positions at this time.</b></p>-->
-<div aria-multiselectable="table" class="panel-group" id="careers" role="tablist">
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="senior-python-developer" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#senior-python-developer" role="button">Senior Python Developer</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+<div>
+	<p>
+		Working at TACC means being part of a dynamic and challenging environment, where talented individuals can pursue their interests, engage their imaginations, and work at the forefront of computational research. Working with us also means living in Austin, an exceptional city that thrives on innovation, culture, and creativity. Investigate current opportunities below.</p>
+	<h4>
+		Current Job Opportunities</h4>
+	<!--<p><b>No open positions at this time.</b></p>-->
+	<div aria-multiselectable="table" class="panel-group" id="careers" role="tablist">
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
+					<a aria-controls="senior-devops-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-devops-developer" role="button">Senior DevOps Developer</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-developer" role="tabpanel">
+				<div class="panel-body">
+					<p>
+						This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00013541" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="senior-devops-developer" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#senior-devops-developer" role="button">Senior DevOps Developer</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="senior-devops-developer" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					This position will design, implement and operate an on-premise, national-scale Kubernetes platform as a service for the research computing community.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-DevOps-Engineer_R_00013541" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+		<div class="panel panel-default">
+			<div class="panel-heading" id="data" role="tab">
+				<h4 class="panel-title">
+					<a aria-controls="senior-python-developer" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#senior-python-developer" role="button">Senior Python Developer</a></h4>
+			</div>
+			<div aria-labelledby="data" class="panel-collapse collapse" id="senior-python-developer" role="tabpanel">
+				<div class="panel-body">
+					<p>
+						This position will contribute to the design, implementation and operation of cloud native applications and infrastructure supporting computational science endeavors.</p>
+					<p>
+						<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Senior-Python-Developer_R_00013540" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="panel panel-default">
-		<div class="panel-heading" id="data" role="tab">
-			<h4 class="panel-title">
-				<a aria-controls="research-associate-for-sci" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#research-associate-for-sci" role="button">Research Associate (SCI)</a></h4>
-		</div>
-		<div aria-labelledby="data" class="panel-collapse collapse" id="research-associate-for-sci" role="tabpanel">
-			<div class="panel-body">
-				<p>
-					The Research Associate is a position in the Scalable Computational Intelligence (SCI) group at TACC. The individual will contribute to research, development, and support activities involving data mining and machine learning technologies and the interfaces by which users can transparently harness these techniques and technologies.</p>
-				<p>
-					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/en-US/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Research-Associate_R_00006550" target="_blank" title="Apply Now">Apply Now</a></strong></p>
-			</div>
-		</div>
-	</div>
 	</div>
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
