--- a/web-content/root/education/stem-programs/code-at-tacc/_styles.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/_styles.html
@@ -1,3 +1,4 @@
+<code>Styles for 2021 "Code@TACC …" Pages</code>
 <style id="style--code-at-tacc" type="text/css">
 body {
 	background: #f4f4f4; /* Fallback */
@@ -28,26 +29,10 @@ p.centered img {
 	margin: 0 auto;
 }
 
-#retro-header-wrapper {
+.container {
 	width:90%;
 	margin: 0px auto 0px auto;
 	padding:0px 5%;
-}
-
-#retro-header-div {
-	margin-left: 0; /* overwrite Bootstrap row */
-	margin-right: 0; /* overwrite Bootstrap row */
-
-	/* Less padding because "Code@TACC Styles" web content is assumed to be present */
-	/* FAQ: A web content without visual content has a min-height of 2.5em → 35px */
-	/* padding: 30px 0px; */
-	padding: 0 0 30px 0px;
-}
-
-#retro-body-wrapper {
-	width:90%;
-	margin: 0px auto 0px auto;
-	padding:50px 5%;
 }
 
 .headers{
@@ -95,18 +80,28 @@ p.centered img {
 
 
 .camp-name {
+	display: block;
+
 	text-transform: uppercase;
 	font-family:"HelveticaNeueLTStd-BdCn","Helvetica Neue","Helvetica",sans-serif;
 	text-align: center;
-	/* margin: 25px 0; */
+}
+.camp-name:not(.camp-name--minor) {
 	font-size: 7em;
+}
+.camp-name--minor {
+	font-size: 3em;
+	line-height: normal;
+}
+.camp-name + .camp-name--minor {
+	margin-block: -0.5em 0.5em;
 }
 
 .camp-dates {
 	color:#039;
 	font-size: 2.75em;
 	margin-top: 0px;
-	margin-bottom: 0px;
+	margin-bottom: 30px;
 	text-align: center;
 }
 
