--- a/web-content/root/about/jobs.html
+++ b/web-content/root/about/jobs.html
@@ -64,7 +64,7 @@
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
 			<h4 class="panel-title">
-				<a aria-controls="__JOB_TITLE_LOWERCASE_ID__" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#__JOB_TITLE_LOWERCASE_ID__" role="button">__JOB_TITLE__</a></h4>
+				<a aria-controls="__JOB_TITLE_LOWERCASE_ID__" aria-expanded="true" class="collapsed" data-parent="#careers" data-toggle="collapse" href="#__JOB_TITLE_LOWERCASE_ID__" role="button">__JOB_TITLE__</a></h4>
 		</div>
 		<div aria-labelledby="data" class="panel-collapse collapse" id="__JOB_TITLE_LOWERCASE_ID__" role="tabpanel">
 			<div class="panel-body">
