--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
-				July 26 – August 6, 2021</h2>
+				July 24 – July 30, 2022</h2>
 		</div>
 	</header>
 	<div class="row">
@@ -25,11 +25,11 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				Connected is an innovative and exciting virtual summer program that lets students explore where coding meets communities. Students will use networked sensors to collect data and create models for environmental relevant problems. During the camp, you will learn how data can be used to tell a science story.</p>
+				Connected is an innovative and exciting virtual summer program that lets students explore where coding meets communities. You will use networked sensors to collect data and create models for environmentally relevant problems. During the camp, you will learn how data can be used to tell a science story.</p>
 			<p>
-				All current 10th and 11th (rising 11th and 12th graders) high school students with prior electronics or computer programming experience are welcome to apply. Selected students will receive a kit of supplies to create a sensor that collects environmental data.</p>
+				All current 10th and 11th (rising 11th and 12th graders) high school students with prior electronics or computer programming experience are welcome to apply.</p>
 			<p>
-				Students are expected to participate in Code@TACC Connected Monday through Friday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
+				Students are expected to participate in Code@TACC Connected until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
@@ -40,29 +40,27 @@
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">July 26 – August 6, 2021</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">July 24 – July 30, 2022</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
 				<span class="data-banner__title">Application</span>
-				<!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_bQPUEIPTAbT80zH" target="_blank">Apply Here</a>-->
+				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_bQPUEIPTAbT80zH" target="_blank">Click to Apply</a>
 			</h2>
 			<!-- OPEN: Close on Date. --><!--
-			<p class="data-banner__content  small">
-				Application closes May 17, 2021</p>
+			<p class="data-banner__content">
+				Application closes _Month_ _DATE_, _YEAR_</p>
 			-->
-			<!-- OPEN: Close on Date. Notify by Date --><!--
+			<!-- OPEN: Close on Date. Notify by Date -->
 			<p class="data-banner__content  small">
-				Application closes April 26, 2021<br />
-				We will update be notified of acceptance on May 8, 2020</p>
-			-->
+				Application closes May 5, 2022. Students to be notified of acceptance on May 13, 2022.</p>
 			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
-				Participants will be notified by May 15, if they were selected to participate in the program.</p>
+				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
 			-->
-			<!-- CLOSED: Simple -->
-			<p class="data-banner__content  small">
-				Applications closed.</p>
+			<!-- CLOSED: Simple --><!--
+			<p class="data-banner__content">
+				Applications closed.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -78,18 +76,16 @@
 		<div class="col-md-6 col-xs-12">
 			<h4 class="camp-subhead">
 				PROSPECTIVE ACTIVITIES</h4>
-			<div class="col-md-12">
-				<ul>
-					<li>
-						Work in a project-based learning environment</li>
-					<li>
-						Use sensor networks to collect data</li>
-					<li>
-						Get a private virtual tour at the TACC Visualization Laboratory and data center</li>
-					<li>
-						Collaborate with peers, college students, scientists, researchers and engineers</li>
-				</ul>
-			</div>
+			<ul class="col-md-12">
+				<li>
+					Work in a project-based learning environment.</li>
+				<li>
+					Use sensor networks to collect data.</li>
+				<li>
+					Get a private virtual tour at the TACC Visualization Laboratory and data center.</li>
+				<li>
+					Collaborate with peers, college students, scientists, researchers and engineers.</li>
+			</ul>
 		</div>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
@@ -106,45 +102,37 @@
 					<ul class="info-list">
 						<li>
 							Willingness to learn</li>
-						<li>
+						<!--<li>
 							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
-							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
+							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>-->
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						PROGRAM FORMS</h4>
-					<!--<ul class="info-list">
-						<li>
-							Required forms will be available soon.</li>
-					</ul>-->
 					<p>
 						<em>Code of Conduct,</em><br />
-						<em>Release and Indemnification Form</em><br />
-						<em>&amp; Media Release:</em></p>
-					<ul class="info-list">
+						<em>Release and Indemnification</em><br />
+						<em>&amp; Media Release<!--:--></em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="https://powerforms.docusign.net/7f448a69-ffbe-4dc1-ae3f-cbab0cb657ad?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - ENGLISH">English</a></li>
 						<li>
 							<a href="https://powerforms.docusign.net/9ff76af9-3e82-481c-9cc0-06aa08e9f3a4?env=na1&acct=d40a37d5-d708-44dd-9ea7-aab378b81326&accountId=d40a37d5-d708-44dd-9ea7-aab378b81326" target="_blank" title="2021 Code@TACC Connected Forms - SPANISH">Español</a></li>
-					</ul>
+					</ul>-->
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
-					<ul class="info-list">
-						<li>
-							Communication plan will be available soon.</li>
-					</ul>
 					<p>
-						<em>Y.P.P. Communication Plan:</em></p>
-					<ul class="info-list">
+						<em>Y.P.P. Communication Plan<!--:--></em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+Connected+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>
+					</ul>-->
 				</div>
 			</div>
 		</div>
@@ -164,7 +152,17 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> July 26 – August 6, 2021. Sessions will be Monday - Friday. No sessions will be held over the weekend.</div>
+							<b>A:</b> Sunday, July 24, 2022 through Saturday, July 30, 2022.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="location" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="location-answer" aria-expanded="true" class="collapsed" data-parent="#connected-camp-faq" data-toggle="collapse" href="#location-answer" role="button"> <b>Q:</b> Where will camp be located? </a></h4>
+					</div>
+					<div aria-labelledby="location" class="panel-collapse collapse" id="location-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> This program will be located on the campus of The University of Texas at Austin.</div>
 					</div>
 				</div>
 			</div>
