--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -38,14 +38,26 @@
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__content">June 22—Sept 6, 2020</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 22—Sept 6, 2020</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
 				<span class="data-banner__title">Application</span>
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_e2R16TteAK9kUo5" target="_blank">Apply Here</a></h2>
-			<p class="data-banner__content  small">
+				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_e2R16TteAK9kUo5" target="_blank">Click to Apply</a></h2>
+			<!-- OPEN: Close on Date. -->
+			<p class="data-banner__content">
 				Registration closes on June 3rd, 2020.</p>
+			<!-- OPEN: Close on Date. Notify by Date --><!--
+			<p class="data-banner__content  small">
+				Registration closes on _Month_ _DATE_, _YEAR_. Students to be notified of acceptance on _Month_ _DATE_, _YEAR_.</p>
+			-->
+			<!-- CLOSED: Notify by Date --><!--
+			<p class="data-banner__content  small">
+				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
+			-->
+			<!-- CLOSED: Simple --><!--
+			<p class="data-banner__content">
+				Applications closed.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -59,28 +71,25 @@
 				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/1822769/cybersecutiry-comptia-3.jpg" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
-			<h4 class="camp-subhead">
-				PROSPECTIVE ACTIVITIES</h4>
-			<p>
+			<h3 class="camp-subhead">
+				PROSPECTIVE ACTIVITIES</h3>
+			<p class="small">
 				The CompTIA Security+ certification supports participants who are considering a cybersecurity related career track, want to add security credentials to their resume, or need to learn network security as part of their job.</p>
-			<h5>
-				Security+ Domains</h5>
-			<div>
-				<ul>
-					<li>
-						<small>21% Threats, Attacks and Vulnerabilities</small></li>
-					<li>
-						<small>22% Technologies and Tools</small></li>
-					<li>
-						<small>15% Architecture and Design</small></li>
-					<li>
-						<small>16% Identify and Access Management</small></li>
-					<li>
-						<small>14% Risk Management</small></li>
-					<li>
-						<small>12% Cryptography and PKI</small></li>
-				</ul>
-			</div>
+			<strong class="small">Security+ Domains:</strong>
+			<ul class="col-md-12  small">
+				<li>
+					21% Threats, Attacks and Vulnerabilities</li>
+				<li>
+					22% Technologies and Tools</li>
+				<li>
+					15% Architecture and Design</li>
+				<li>
+					16% Identify and Access Management</li>
+				<li>
+					14% Risk Management</li>
+				<li>
+					12% Cryptography and PKI</li>
+			</ul>
 		</div>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
@@ -104,7 +113,7 @@
 					<h4 class="camp-subhead">
 						PROGRAM FORMS</h4>
 					<p>
-						<em>Release and Indemnification Form:</em></p>
+						<em>Release and Indemnification:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href=" https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6aa21f10-26a2-4ccc-bb3c-0bb9ba4665f4&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Minors Required Documents</a><br />
@@ -136,11 +145,11 @@
 			<h2 class="camp-subhead">
 				Frequently Asked Questions</h2>
 			<!-- SPECIFIC TO THIS CAMP -->
-			<div aria-multiselectable="table" class="panel-group" id="connected-camp-faq" role="tablist">
+			<div aria-multiselectable="table" class="panel-group" id="comptia-camp-faq" role="tablist">
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#connected-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <strong>Q:</strong> What are the dates of the program?</a></h4>
+							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#comptia-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <strong>Q:</strong> What are the dates of the program?</a></h4>
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
@@ -148,9 +157,19 @@
 					</div>
 				</div>
 				<div class="panel panel-default">
+					<div class="panel-heading" id="ages" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="ages-answer" aria-expanded="true" class="collapsed" data-parent="#comptia-camp-faq" data-toggle="collapse" href="#ages-answer" role="button"> <b>Q</b>: What are the ages of the Code@TACC participants? </a></h4>
+					</div>
+					<div aria-labelledby="ages" class="panel-collapse collapse" id="ages-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> During the summer program, participants are rising juniors and seniors in high school.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
 					<div class="panel-heading" id="location" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="location-answer" aria-expanded="true" class="collapsed" data-parent="#connected-camp-faq" data-toggle="collapse" href="#eligibility-answer" role="button"> <strong>Q:</strong> What is the eligibility of the Code@TACC Cybersecurity Certification Program?</a></h4>
+							<a aria-controls="location-answer" aria-expanded="true" class="collapsed" data-parent="#comptia-camp-faq" data-toggle="collapse" href="#eligibility-answer" role="button"> <strong>Q:</strong> What is the eligibility of the Code@TACC Cybersecurity Certification Program?</a></h4>
 					</div>
 					<div aria-labelledby="eligibility" class="panel-collapse collapse" id="eligibility-answer" role="tabpanel">
 						<div class="panel-body">
