--- a/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -3,10 +3,10 @@
 	<header class="row">
 		<div class="col-sm-12">
 			<p>
-				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/GenCyber_logo.png/ea8a7d72-8b79-4b5d-9f65-eb9040f855d5?t=1617916688170" /></p>
-			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />--></div>
+				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
+		</div>
 		<div class="col-sm-12">
-			<span class="camp-name">GenCyber@TACC</span>
+			<span class="camp-name">Cybersecurity</span>
 		</div>
 		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
 			<p>
@@ -14,7 +14,7 @@
 		</div> -->
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
-				July 6 – July 16, 2021</h2>
+				June 12–18, 2022</h2>
 		</div>
 	</header>
 	<div class="row">
@@ -29,12 +29,11 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				GenCyber@TACC is an innovative and exciting summer program that increases high school students' interest in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn about online personal safety, computer networking, mobile security, cryptography, cloud computing, cyber crime and ethics.</p>
+				Code@TACC Cybersecurity is an innovative and exciting summer program that increases high school students' interest in cybersecurity careers and online safety. Students participate in fun, exploratory lessons and learn about online personal safety, computer networking, mobile security, cryptography, cloud computing, cyber-crime and ethics.</p>
 			<p>
-				All current 10th and 11th grade (rising 11th and 12th grade) high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted to participate in the virtual program.</p>
+				All current 10th through 11th grade high school students are welcome to apply. Students from diverse backgrounds are encouraged to apply. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
 			<p>
-				Students are expected to participate in GenCyber@TACC until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
-			<!--<p>This camp was funded with the generosity from Cisco and Silicon Valley Community Foundation.</p>--></div>
+				Students are expected to participate in Code@TACC Cybersecurity until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p></div>
 		<div class="col-md-6">
 			<p class="centered">
 				<img alt="Student working on laptop" class="img-responsive" src="/documents/1084364/1836493/cybersecurity-2.jpg/" /></p>
@@ -44,25 +43,26 @@
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">July 6 – July 16, 2021</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 12–18, 2022</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
 				<span class="data-banner__title">Application</span>
-				<!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_aVhIgJLYLwSo5Hn" target="_blank">Apply Here</a>-->
+				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_0qY4tR6vFwoeOLs" target="_blank">Click to Apply</a>
 			</h2>
-			<!-- OPEN: Close on Date. Notify by Date --><!--
+			<!-- OPEN: Close on Date. --><!--
+			<p class="data-banner__content">
+				Registration closes on _Month_ _DATE_, _YEAR_.</p>-->
+			<!-- OPEN: Close on Date. Notify by Date -->
 			<p class="data-banner__content  small">
-				Application closes April 26, 2021<br />
-				We will update be notified of acceptance on May 8, 2020</p>
-			-->
+				Application closes April 18, 2022. Students to be notified of acceptance on April 29, 2022.</p>
 			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
-				Participants will be notified by May 15, if they were selected to participate in the program.</p>
+				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
 			-->
-			<!-- CLOSED: Simple -->
-			<p class="data-banner__content  small">
-				Applications closed.</p>
+			<!-- CLOSED: Simple --><!--
+			<p class="data-banner__content">
+				Applications closed.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -76,24 +76,22 @@
 				<img alt="Students look at video screen" class="img-responsive" src="/documents/1084364/1836493/cybersecurity-3.jpg/" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
-			<h4 class="camp-subhead">
-				PROSPECTIVE ACTIVITIES</h4>
-			<div class="col-md-12">
-				<ul>
-					<li>
-						<small>Use a project based-learning approach to foster creativity and problem solving skills</small></li>
-					<li>
-						<small>Use hands-on technology to learn the basics of cybersecurity</small></li>
-					<li>
-						<small>Learn how a cybersecurity professional would apply software security to their code and data sets</small></li>
-					<li>
-						<small>Get a private virtual tour at the TACC Visualization Laboratory (Vislab) and data center</small></li>
-					<li>
-						<small>Interact with TACC's cutting-edge technology systems</small></li>
-					<li>
-						<small>Collaborate with peers, college students, scientists, researchers and engineers</small></li>
-				</ul>
-			</div>
+			<h3 class="camp-subhead">
+				PROSPECTIVE ACTIVITIES</h3>
+			<ul class="col-md-12  small">
+				<li>
+					Use a project based-learning approach to foster creativity and problem solving skills.</li>
+				<li>
+					Use hands-on technology to learn the basics of cybersecurity.</li>
+				<li>
+					Learn how a cybersecurity professional would apply software security to their code and data sets.</li>
+				<li>
+					Get a private virtual tour at the TACC Visualization Laboratory (Vislab) and data center.</li>
+				<li>
+					Interact with TACC's cutting-edge technology systems.</li>
+				<li>
+					Collaborate with peers, college students, scientists, researchers and engineers.</li>
+			</ul>
 		</div>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
@@ -133,10 +131,10 @@
 					<ul class="info-list">
 						<li>
 							Willingness to learn</li>
-						<li>
+						<!--<li>
 							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
-							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
+							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>-->
 					</ul>
 				</div>
 				<!--<div class="col-md-4 col-sm-12">
@@ -164,14 +162,14 @@
 					</ul>-->
 					<p>
 						<em>Code of Conduct,</em><br />
-						<em>Release and Indemnification Form</em><br />
-						<em>&amp; Media Release:</em></p>
-					<ul class="info-list">
+						<em>Release and Indemnification</em><br />
+						<em>&amp; Media Release<!--:--></em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d587675e-b44e-4223-af5d-9ca523cf5168&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">English</a></li>
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=d438f709-6ea0-4a45-89bc-138daf40ad00&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Español</a></li>
-					</ul>
+					</ul>-->
 					<!--<p>
 						<em>Code of Conduct:</em></p>
 					<ul class="info-list">
@@ -209,18 +207,14 @@
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
-					<!--<ul class="info-list">
-						<li>
-							Communication plan will be available soon.</li>
-					</ul>-->
 					<p>
-						<em>Y.P.P. Communication Plan:</em></p>
-					<ul class="info-list">
+						<em>Y.P.P. Communication Plan<!--:--></em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+GenCyber+-+SPANISH.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - SPANISH">Español</a></li>
-					</ul>
+					</ul>-->
 				</div>
 			</div>
 		</div>
@@ -231,16 +225,26 @@
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
 				Frequently Asked Questions</h2>
-			<div aria-multiselectable="table" class="panel-group" id="dates" role="tablist">
-				<!-- BASICS -->
+			<!-- SPECIFIC TO THIS CAMP -->
+			<div aria-multiselectable="table" class="panel-group" id="cybersecurity-camp-faq" role="tablist">
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#dates" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the dates of camp? </a></h4>
+							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#cybersecurity-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the dates of camp? </a></h4>
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> July 6 – July 16, 2021. Sessions will be Monday - Friday. No sessions will be held over the weekend.</div>
+							<b>A:</b> Sunday, June 12 through Saturday, June 18, 2022.</div>
+					</div>
+				</div>
+				<div class="panel panel-default">
+					<div class="panel-heading" id="location" role="tab">
+						<h4 class="panel-title">
+							<a aria-controls="location-answer" aria-expanded="true" class="collapsed" data-parent="#cybersecurity-camp-faq" data-toggle="collapse" href="#location-answer" role="button"> <b>Q:</b> Where will camp be located? </a></h4>
+					</div>
+					<div aria-labelledby="location" class="panel-collapse collapse" id="location-answer" role="tabpanel">
+						<div class="panel-body">
+							<b>A:</b> This program will be located on the campus of The University of Texas at Austin.</div>
 					</div>
 				</div>
 			</div>
