--- a/web-content/root/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/robotics.html
@@ -4,7 +4,7 @@
 		<div class="col-sm-12">
 			<p>
 				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
-			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />--></div>
+		</div>
 		<div class="col-sm-12">
 			<span class="camp-name">Robotics</span>
 		</div>
@@ -14,7 +14,7 @@
 		</div> -->
 		<div class="col-md-12">
 			<h2 class="camp-dates rwd-dates">
-				June 7 – June 18, 2021</h2>
+				June 26 – July 2, 2022</h2>
 		</div>
 	</header>
 	<div class="row">
@@ -30,41 +30,37 @@
 	<div class="row">
 		<div class="col-md-12">
 			<p>
-				Code@TACC is an innovative and exciting virtual summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (STEM) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
+				Code@TACC is an innovative and exciting virtual summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (<dfn>STEM</dfn>) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
 			<p>
-				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will receive a self-driving robotic vehicle that they can design and program to drive at home.</p>
+				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will be housed in a campus dorm at The University of Texas (UT) at Austin at no cost.</p>
 			<p>
-				Students are expected to participate in Code@TACC Monday - Friday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
+				Students are expected to participate in Code@TACC Sunday – Saturday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC STEM workshops upon completion of the program.</p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 7 – June 18, 2021</span></h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">June 26 – July 2, 2022</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
 				<span class="data-banner__title">Application</span>
-				<!--<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_3ZUZzYPgkW6suOx" target="_blank">Apply Here</a>
-				-->
+				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_4UiwnpRGmA1obQ2" target="_blank">Click to Apply</a>
 			</h2>
-			<!-- OPEN: Close on Date. Notify by Date --><!--
+			<!-- OPEN: Close on Date. --><!--
+			<p class="data-banner__content">
+				Registration closes on _Month_ _DATE_, _YEAR_.</p>-->
+			<!-- OPEN: Close on Date. Notify by Date -->
 			<p class="data-banner__content  small">
-				Application closes April 26, 2021<br />
-				We will update be notified of acceptance on May 8, 2020</p>
-			-->
-			<!-- OPEN: Close on Date --><!--
-			<p class="data-banner__content  small">
-				Application closes April 26, 2021</p>
-			-->
+				Application closes April 25, 2022. Students to be notified of acceptance on May 6, 2022.</p>
 			<!-- CLOSED: Notify by Date --><!--
 			<p class="data-banner__content  small">
-				Participants will be notified by May 15, if they were selected to participate in the program.</p>
+				Participants will be notified by _Month_ _DATE_, if they were selected to participate in the program.</p>
 			-->
-			<!-- CLOSED: Simple -->
-			<p class="data-banner__content  small">
-				Applications closed.</p>
+			<!-- CLOSED: Simple --><!--
+			<p class="data-banner__content">
+				Applications closed.</p>-->
 		</div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
@@ -78,24 +74,22 @@
 				<img alt="One male student testing a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-1.jpg/" /></p>
 		</div>
 		<div class="col-md-9 col-xs-12">
-			<h4 class="camp-subhead">
-				PROSPECTIVE ACTIVITIES</h4>
-			<div class="col-md-12">
-				<ul>
-					<li>
-						Program a robot</li>
-					<li>
-						Use a project based-learning approach to foster creativity and problem solving skills</li>
-					<li>
-						Use hands-on technology to learn the basics of embedded programming languages and electronics</li>
-					<li>
-						Get a private virtual tour of the TACC Visualization Lab and data center</li>
-					<li>
-						Interact with TACC's cutting-edge technology systems</li>
-					<li>
-						Collaborate with peers, college students, scientists, researchers and engineers</li>
-				</ul>
-			</div>
+			<h3 class="camp-subhead">
+				PROSPECTIVE ACTIVITIES</h3>
+			<ul class="col-md-12">
+				<li>
+					Program a robot.</li>
+				<li>
+					Use a project based-learning approach to foster creativity and problem solving skills.</li>
+				<li>
+					Use hands-on technology to learn the basics of embedded programming languages and electronics.</li>
+				<li>
+					Get a private virtual tour of the TACC Visualization Lab and data center.</li>
+				<li>
+					Interact with TACC's cutting-edge technology systems.</li>
+				<li>
+					Collaborate with peers, college students, scientists, researchers and engineers.</li>
+			</ul>
 		</div>
 	</div>
 	<!-- Camp Info: FAQs, What not to Bring -->
@@ -130,14 +124,14 @@
 				</div>-->
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
-						WHAT TO KNOW</h4>
+						WHAT TO BRING</h4>
 					<ul class="info-list">
 						<li>
 							Willingness to learn</li>
-						<li>
+						<!--<li>
 							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
-							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
+							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>-->
 					</ul>
 				</div>
 				<!--<div class="col-md-4 col-sm-12">
@@ -160,13 +154,13 @@
 					<h4 class="camp-subhead">
 						PROGRAM FORMS</h4>
 					<p>
-						<em>Code of Conduct:</em></p>
-					<ul class="info-list">
+						<em>Code of Conduct</em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" target="_blank" title="2021 Code@TACC Code of Conduct - SPANISH">Español</a></li>
-					</ul>
+					</ul>-->
 					<!--<p>
 						<em>Compliance Forms:</em></p>
 					<ul class="info-list">
@@ -176,33 +170,33 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709&amp;env=na1" target="_blank">Español</a></li>
 					</ul>-->
 					<p>
-						<em>Release and Indemnification Form:</em></p>
-					<ul class="info-list">
+						<em>Release and Indemnification<!--:--></em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/UT+Release+Agreement.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/UT+Release+Agreement+-+SPANISH.pdf" target="_blank">Spanish</a></li>
-					</ul>
+					</ul>-->
 					<p>
-						<em>Media Release:</em></p>
-					<ul class="info-list">
+						<em>Media Release<!--:--></em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
-					</ul>
+					</ul>-->
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
 					<p>
-						<em>Y.P.P. Communication Plan:</em></p>
-					<ul class="info-list">
+						<em>Y.P.P. Communication Plan<!--:--></em></p>
+					<!--<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+Robotics.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - ENGLISH">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+Robotics+-+SPANISH.pdf" target="_blank" title="Code@TACC Robotics Communication Plan - SPANISH">Español</a></li>
-					</ul>
+					</ul>-->
 				</div>
 			</div>
 		</div>
@@ -213,16 +207,16 @@
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
 				Frequently Asked Questions</h2>
-			<div aria-multiselectable="table" class="panel-group" id="dates" role="tablist">
-				<!-- BASICS -->
+			<!-- SPECIFIC TO THIS CAMP -->
+			<div aria-multiselectable="table" class="panel-group" id="robotics-camp-faq" role="tablist">
 				<div class="panel panel-default">
 					<div class="panel-heading" id="dates" role="tab">
 						<h4 class="panel-title">
-							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#dates" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the dates of camp? </a></h4>
+							<a aria-controls="dates-answer" aria-expanded="true" class="collapsed" data-parent="#robotics-camp-faq" data-toggle="collapse" href="#dates-answer" role="button"> <b>Q:</b> What are the camp dates? </a></h4>
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> June 7 – June 18, 2021. Sessions will be Monday - Friday. No sessions will be held over the weekend.</div>
+							<b>A:</b> Sunday, June 26, 2022 through Saturday, July 2, 2022.</div>
 					</div>
 				</div>
 			</div>
