--- a/web-content/root/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content/root/education/stem-programs/code-at-tacc/connected.html
@@ -30,6 +30,11 @@
 				All current 10th and 11th (rising 11th and 12th graders) high school students with prior electronics or computer programming experience are welcome to apply.</p>
 			<p>
 				Students are expected to participate in Code@TACC Connected until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program. Selected students will be accepted and housed in a campus dorm at The University of Texas at Austin (UT).</p>
+			<!--
+			<hr />
+			<p>
+				<img src="/documents/1084364/1822769/BPlogo.png/" style="width: 75px; float: left; margin: 2px 15px 10px 0px;" /><br />
+				<i>The camp was funded with the generosity from BP Upstream Digital &amp; Technology.</i></p>-->
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
